test/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: test
          image: localhost:5000/test:latest
          env:
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres-service:5432/postgres
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
            - name: SPRING_DATASOURCE_PASSWORD
              value: admin1234
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: thymeleaf
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # nodePort: 30001
